--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
   "name": "YouTube Playback Speed Control",
-  "description": "Add playback speed indicator and controls to the YouTube video player controls.",
-  "version": "1.5.0",
+  "description": "Add playback speed indicator and controls to the YouTube video player controls. Modified Version of Jan Klass' addon (https://addons.mozilla.org/de/firefox/user/12762958/).",
+  "version": "1.0",
   "content_scripts": [
     {
       "matches": ["*://*.youtube.com/*"],
@@ -17,5 +17,8 @@
   },
   "permissions": [
     "storage"
-  ]
+  ],
+"web_accessible_resources": [
+  "playbackSpeed.svg"
+]
 }
